2003-07-29  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif/ -- add functionality to merge multiple
	  qif file contexts into a single parent context while retaining
	  the ability to add/remove new files.

	* src/import-export/qif-context.c: add functions to get the list
	  of used QifAccount and QifCategory objects from the set of
	  transactions.

2003-07-28  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-gnome/business-gnome.scm: remove
	  some unused (old) code.

2003-07-28  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/druid-hbci-initial.c: Add button for
	manual adding of HBCI accounts. Fixes #117760. Requires latest
	OpenHBCI CVS -- next openhbci-0.9.13 will be out this weekend.

	* src/import-export/hbci/gnc-hbci-{getbalance,gettrans,transfer}.c:
	Add saving of the HBCI_API so that bank's status changes will now
	be remembered immediately. However this might save some
	unnecessary information to disk, but hopefully we will have fixed
	that in OpenHBCI soon.

2003-07-28  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/gnc-date-edit.c: hide the calendar popup
	  on enter/return keypress events (in addition to ESC).
	Fixes #118500

2003-07-27  Matt Vanecek  <mevanecek@yahoo.com>

    * src/backend/postgres/PostgresBackend.c: Added pgendGetBook(),
      to retrieve the QofBook from the session, instead of storing the
      book in the backend object.
    - Where be->book was used, use pgendGetBook() instead.
    - Enhanced debug messages.
    * src/backend/postgres/PostgresBackend.h: Added the qofbook.h
      include, and the pgendGetBook() prototype
    * src/backend/postgres/book.c: Changed pgendGetBook to
      pgendBookRestore() to reflect its functionality of restoring
      the book's data to the engine.
    * src/backend/postgres/price.c: In pgendPriceFind(), couched the
      currenct portion of the SQL statement in an "if" statement,
      because gnc_pricedb_lookup_latest_any_currency() can pass in